# tm-simulator

./: .gitignore  README.md  main.py  pyproject.toml  tm.py
.github/workflows/: python-publish.yml
src/tm_simulator/: __init__.py  tm.py
tms/: add.TM  binary.TM  count.MTTM  invert.TM
