[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tm_simulator"
version = "0.1.0"
authors = [
  { name="TheVideoFelix" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.13.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
]

[project.scripts]
tm_simulator = "tm_simulator.cli:main"